[package]
name = "multi-party-schnorr"
version = "0.4.3"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>",
    "Doron <doron@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
curv = { git = "https://github.com/KZen-networks/curv" , tag = "v0.5.9"}

[dependencies.centipede]
git = "https://github.com/KZen-networks/centipede"
tag = "v0.2.9"

[dev-dependencies]
hex = "0.3.2"

