[package]
name = "multi-party-schnorr"
version = "0.4.5"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>",
    "Doron <doron@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"

[dependencies.curv]
package = "curv-kzen"
version = "0.7"
default-features = false

[dependencies.centipede]
git = "https://github.com/KZen-networks/centipede"
tag = "v0.2.12"
default-features = false

[dev-dependencies]
hex = "0.3.2"

[features]
default = ["curv/rust-gmp-kzen"]
